Rdevance anaser par quittance

--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -47,6 +47,7 @@
                     <th>Nombre de revisites</th>
                     <th>Montant des visites</th>
                     <th>Montant des revisites</th>
+                    <th>Redevance ANASER</th>
                     <th>Chiffre d'affaire</th>
                 </tr>
             </thead>
@@ -58,6 +59,7 @@
                         <td>{{ resultat[2]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
                     </tr>
                 {% endfor %}
@@ -92,6 +94,7 @@
                     <th>Nombre de revisites</th>
                     <th>Montant des visites</th>
                     <th>Montant des revisites</th>
+                    <th>Redevance ANASER</th>
                     <th>Chiffre d'affaire</th>
                 </tr>
             </thead>
@@ -103,6 +106,7 @@
                         <td>{{ resultat[2]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
                     </tr>
                 {% endfor %}
