Rdevance anaser par quittance

--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -57,7 +57,7 @@
                         <td>{{ resultat[0] }}</td>
                         <td>{{ resultat[1]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[2]|number_format(0, ',', ' ') }}</td>
-                        <td>{{ (resultat[3]-resultat[5])|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
@@ -104,7 +104,7 @@
                         <td>{{ resultat[0] }}</td>
                         <td>{{ resultat[1]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[2]|number_format(0, ',', ' ') }}</td>
-                        <td>{{ (resultat[3])|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
