--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -37,18 +37,18 @@
                     <th  style="text-align:left;vertical-align: middle">
                         CAISSE N° : {{ caisse.numero }}
                     </th>
-                    <th colspan="3" style="text-align:left;vertical-align: middle">
+                    <th colspan="4" style="text-align:left;vertical-align: middle">
                         CAISSIER : {{ caisse.getAffectationActive.agent.nomComplet }}
                     </th>
                 </tr>
                 <tr>
                     <th>Catégories</th>
-                    <th>Nombre de visites</th>
-                    <th>Nombre de revisites</th>
-                    <th>Montant des visites</th>
-                    <th>Montant des revisites</th>
-                    <th>Redevance ANASER</th>
-                    <th>Chiffre d'affaire</th>
+                    <th>Nbr visites</th>
+                    <th>Nbr revisites</th>
+                    <th>CA visites</th>
+                    <th>CA revisites</th>
+                    <th>ANASER</th>
+                    <th>CA Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,7 +66,7 @@
             
             </tbody>
             <tfoot>
-                <tr><th colspan="6" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
+                <tr><th colspan="7" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
             </tfoot>
         </table>
     </div>
@@ -84,18 +84,18 @@
                     <th  style="text-align:left;vertical-align: middle">
                         CAISSE N° : {{ caisse.numero }}
                     </th>
-                    <th colspan="3" style="text-align:left;vertical-align: middle">
+                    <th colspan="4" style="text-align:left;vertical-align: middle">
                         CAISSIER : {{ caisse.getAffectationActive.agent.nomComplet }}
                     </th>
                 </tr>
                 <tr>
-                    <th>Catégories</th>
-                    <th>Nombre de visites</th>
-                    <th>Nombre de revisites</th>
-                    <th>Montant des visites</th>
-                    <th>Montant des revisites</th>
-                    <th>Redevance ANASER</th>
-                    <th>Chiffre d'affaire</th>
+                   <th>Catégories</th>
+                    <th>Nbr visites</th>
+                    <th>Nbr revisites</th>
+                    <th>CA visites</th>
+                    <th>CA revisites</th>
+                    <th>ANASER</th>
+                    <th>CA Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -113,7 +113,7 @@
             
             </tbody>
             <tfoot>
-                <tr><th colspan="6" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
+                <tr><th colspan="7" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
             </tfoot>
         </table>
         </div>
