Rdevance anaser par quittance

--- a/app/Resources/views/statistique/caisse/etat.html.twig
+++ b/app/Resources/views/statistique/caisse/etat.html.twig
@@ -43,12 +43,12 @@
                 </tr>
                 <tr>
                     <th>Catégories</th>
-                    <th>Nombre de visites</th>
-                    <th>Nombre de revisites</th>
-                    <th>Montant des visites</th>
-                    <th>Montant des revisites</th>
-                    <th>Redevance ANASER</th>
-                    <th>Chiffre d'affaire</th>
+                    <th>Nbr visites</th>
+                    <th>Nbr revisites</th>
+                    <th>CA visites</th>
+                    <th>CA revisites</th>
+                    <th>ANASER</th>
+                    <th>CA Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -88,12 +88,12 @@
                 </tr>
                 <tr>
                     <th>Catégories</th>
-                    <th>Nombre de visites</th>
-                    <th>Nombre de revisites</th>
-                    <th>Montant des visites</th>
-                    <th>Montant des revisites</th>
-                    <th>Redevance ANASER</th>
-                    <th>Chiffre d'affaire</th>
+                    <th>Nbr visites</th>
+                    <th>Nbr revisites</th>
+                    <th>CA visites</th>
+                    <th>CA revisites</th>
+                    <th>ANASER</th>
+                    <th>CA Total</th>
                 </tr>
             </thead>
             <tbody>
