--- a/app/Resources/views/vehicule/edit.html.twig
+++ b/app/Resources/views/vehicule/edit.html.twig
@@ -34,7 +34,8 @@
         $( function() {
             //$("#appbundle_vehicule_genre" ).val("{{- vehicule.typeVehicule.genre.code -}}");
             $("#appbundle_vehicule_proprietaireId" ).val("{{- vehicule.proprietaire.id -}}");
-            $("#appbundle_vehicule_proprietaireAjax" ).val("{{- vehicule.proprietaire.nom -}} {{- vehicule.proprietaire.prenom -}} {{- vehicule.proprietaire.adresse -}}");
+            $("#appbundle_vehicule_proprietaireAjax" ).val("{{- vehicule.proprietaire.nom -}}"+" "+ "{{- vehicule.proprietaire.prenom -}}"+" "+"{{- vehicule.proprietaire.adresse -}}");
+            $("#appbundle_vehicule_proprietaireAjax" ).width($("#appbundle_vehicule_proprietaireAjax" ).val().length+"ch");
             //$("#appbundle_vehicule_genre" ).prop("disabled", true);
             $("#appbundle_vehicule_dateCarteGrise" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
             $("#appbundle_vehicule_dateMiseCirculation" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
@@ -105,7 +106,7 @@
                         return {
                             nom :objet.nom,
                             prenom : objet.prenom,
-                            telephone : objet.adresse,
+                            adresse : objet.adresse,
                             id : objet.id
                         };
                     }));
