On masque la ligne ANASER sur la redevance

--- a/app/Resources/views/quittance/show.principal.html.twig
+++ b/app/Resources/views/quittance/show.principal.html.twig
@@ -41,13 +41,13 @@
 <table border="1" style="width:100%;" cellpadding="0" cellspacing="0">
      <tbody>
          <tr>
-            <td colspan="8" style="border:none; padding:5px">
+            <td colspan="7" style="border:none; padding:5px">
                 <span style="font-weight: bold">CVT : {{libelle}}</span> <span style="font-weight: bold">| Caisse : {{quittance.visite.chaine.caisse.numero}} | Piste : {{quittance.visite.chaine.piste.numero}}</span>
                 <span style="margin-left:80px; font-weight:bold;">Type/Marque : {%if quittance.visite.vehicule.modele%}{{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}{%endif%}</span>
             </td>
          </tr>
             <tr>
-                <td colspan="8" style="border:none; padding:5px">
+                <td colspan="7" style="border:none; padding:5px">
                     <span style="font-weight: bold">Date : {% if quittance.dateCreation %}{{ quittance.dateCreation|date('Y-m-d') }}{% endif %}</span>
                     <span style="margin-left:280px; font-weight:bold;">Immatriculation : {{ quittance.visite.vehicule.immatriculation }}</span>
                 </td>
@@ -58,7 +58,7 @@
                 <th>Prix total</th>
                 <th>TVA 18%</th>
                 <th>Droit de timbre</th>
-                <th>Redevance ANASER</th>
+                {# <th>Redevance ANASER</th> #}
                 <th>Total TTC</th>
                 <th>Caissier</th>
             </tr>
@@ -69,7 +69,7 @@
                 <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                 {% if quittance.montantVisite > 0 %}
                     <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
-                    <td>{{ quittance.anaser|number_format(0, ',', ' ')}}</td>
+                    {# <td>{{ quittance.anaser|number_format(0, ',', ' ')}}</td> #}
                     <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre+quittance.anaser)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
                 {% else %}
                     <td>0</td>
@@ -98,13 +98,13 @@
     <table border="1" style="width:100%;" cellpadding="0" cellspacing="0">
          <tbody>
              <tr>
-                <td colspan="8" style="border:none; padding:5px">
+                <td colspan="7" style="border:none; padding:5px">
                     <span style="font-weight: bold">CVT : {{libelle}}</span> <span style="font-weight: bold">| Caisse : {{quittance.visite.chaine.caisse.numero}} | Piste : {{quittance.visite.chaine.piste.numero}}</span>
                     <span style="margin-left:80px; font-weight:bold;">Type/Marque : {%if quittance.visite.vehicule.modele%}{{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}{%endif%}</span>
                 </td>
              </tr>
                 <tr>
-                    <td colspan="8" style="border:none; padding:5px">
+                    <td colspan="7" style="border:none; padding:5px">
                         <span style="font-weight: bold">Date : {% if quittance.dateCreation %}{{ quittance.dateCreation|date('Y-m-d') }}{% endif %}</span>
                         <span style="margin-left:280px; font-weight:bold;">Immatriculation : {{ quittance.visite.vehicule.immatriculation }}</span>
                     </td>
@@ -115,7 +115,7 @@
                     <th>Prix total</th>
                     <th>TVA 18%</th>
                     <th>Droit de timbre</th>
-                    <th>Redevance ANASER</th>
+                    {# <th>Redevance ANASER</th> #}
                     <th>Total TTC</th>
                     <th>Caissier</th>
                 </tr>
@@ -126,7 +126,7 @@
                     <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                     {% if quittance.montantVisite > 0 %}
                         <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
-                        <td>{{ quittance.anaser|number_format(0, ',', ' ')}}</td>
+                        {#<td>{{ quittance.anaser|number_format(0, ',', ' ')}}</td>#}
                         <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre+quittance.anaser)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
                     {% else %}
                         <td>0</td>
