--- a/app/Resources/views/statistique/detail/centre.html.twig
+++ b/app/Resources/views/statistique/detail/centre.html.twig
@@ -83,7 +83,7 @@
                     {% set nbr = nbr+1 %}
                     <tr>
                         <td>{{ visite.vehicule.typeVehicule.libelle }}</td>
-                        <td>{{ visite.vehicule.immatriculation }}</td>
+                        <td>{% if visite.immatriculation_v is not null %} {{ visite.immatriculation_v }} {%  else %}{{ visite.vehicule.immatriculation }}{%  endif %}</td>
                         <td>{% if visite.date %}{{ visite.date|date('Y-m-d h:m:s') }}{% endif %}</td>
                     </tr>
                 {% endfor %}
