--- a/app/Resources/views/statistique/detail/reussite.html.twig
+++ b/app/Resources/views/statistique/detail/reussite.html.twig
@@ -1,22 +1,22 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
 {% embed  '::centre/menu.html.twig' %}
-{% block menu_echec_actif %}active{% endblock %}
+{% block menu_reussite_actif %}active{% endblock %}
 {% block menu_statistiques_open %}active{% endblock %}
 {% endembed %}
 {% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item">Statistiques echecs</li>
+        <li class="breadcrumb-item">Statistiques réussites</li>
     </ol>
 {% endblock %}
 {% block menu_gestion_actif %}active{% endblock %}
-{% block pagetitle -%}STATISQUES ECHEC{% endblock %}
+{% block pagetitle -%}STATISQUES REUSSITES{% endblock %}
 {% block actions %}
     <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint" onclick="imprimer()">IMPRIMER</a></label>
     <label class="btn btn-warning pointer-event"> 
-        <form method='POST' action='{{ path('admin_gestion_centre_statistique_echec_index') }}'>
+        <form method='POST' action='{{ path('admin_gestion_centre_statistique_reussite_index') }}'>
             Du <input type="text" id="debut" name="debut" value="{{ debut }}" /> 
             Au <input type="text" id="fin" name="fin" value="{{ fin }}" />
             <input type="submit" value="Actualiser"/>
@@ -57,7 +57,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="2">NB VISITES EN ECHEC SUR LA PERIODE</td><td >{{ nbr|number_format(0, ',', ' ') }}</td>
+                    <td colspan="2">NB VISITES REUSSIES SUR LA PERIODE</td><td >{{ nbr|number_format(0, ',', ' ') }}</td>
                 </tr>
             </tfoot>
             
