--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -14,7 +14,6 @@
 {% block menu_gestion_actif %}active{% endblock %}
 {% block pagetitle -%}ETAT JOURNALIER DE LA CAISSE {{ caisse.numero }}{% endblock %}
 {% block actions %}
-    <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint" onclick="imprimer()">IMPRIMER</a></label>
     {#<label class="btn btn-warning pointer-event"> 
         <form method='POST' action='{{ path('centre_gestion_statistiques_caissier_etat') }}'>
             Du <input type="text" id="debut" name="debut" value="{{ debut }}" /> 
@@ -25,7 +24,8 @@
 {% endblock %}
 {% block body -%}
     {% for affectation in resultats %}
-        <div class="table-responsive">
+        <div class="table-responsive" id="{{ affectation[0] }}">
+            <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint{{ affectation[0] }}" onclick="imprimer('{{ affectation[0] }}')">IMPRIMER</a></label>
             <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
                 <thead>
                     <tr>
@@ -69,13 +69,13 @@
                             
                         </tr>
                         <tr>
-                            <td>{{ total[0] }}</td>
-                            <td>{{ total[1]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[2]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[3]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[4]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[5]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[6]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][0] }}</td>
+                            <td>{{ affectation[4][1]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][2]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][3]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][4]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][5]|number_format(0, ',', ' ') }}</td>
+                            <td>{{ affectation[4][6]|number_format(0, ',', ' ') }}</td>
                         </tr>
 
                 </tbody>
@@ -86,68 +86,71 @@
         </div>
     {% endfor %}
     
-    
-    {% for affectation in resultats %}
-        <div class="hidden" id="printDiv">
-            <div class="table-responsive"  style="width:200mm">
-            <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
-                <thead>
-                    <tr>
-                        <th style="text-align:left">
-                            <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
-                        </th>
-                         <th  style="text-align:left;vertical-align: middle">
-                            DATE : {{ debut }}
-                        </th>
-                        <th  style="text-align:left;vertical-align: middle">
-                            CAISSE N° : {{ caisse.numero }}
-                        </th>
-                        <th colspan="4" style="text-align:left;vertical-align: middle">
-                            CAISSIER : {{ affectation[0] }}
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Catégories</th>
-                        <th>Nbr visites</th>
-                        <th>Nbr revisites</th>
-                        <th>CA visites</th>
-                        <th>CA revisites</th>
-                        <th>ANASER</th>
-                        <th>CA Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    
+    {%  if resultats is not empty %}
+        {% for affectation in resultats %}
+            <div class="hidden" id="printDiv">
+                <div class="table-responsive"  style="width:200mm">
+                <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
+                    <thead>
                         <tr>
-                            {% for ligne in affectation[1] %}
-                            <td>
-                                {% if loop.index == 1 %}
-                                    {{ ligne }}
-                                {% else %}
-                                    {{ ligne|number_format(0, ',', ' ') }}
-                                {% endif %}
-                            </td>
-                            {% endfor %}
-                            
+                            <th style="text-align:left">
+                                <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
+                            </th>
+                             <th  style="text-align:left;vertical-align: middle">
+                                DATE : {{ debut }}
+                            </th>
+                            <th  style="text-align:left;vertical-align: middle">
+                                CAISSE N° : {{ caisse.numero }}
+                            </th>
+                            <th colspan="4" style="text-align:left;vertical-align: middle">
+                                CAISSIER : {{ affectation[0] }}
+                            </th>
                         </tr>
                         <tr>
-                            <td>{{ total[0] }}</td>
-                            <td>{{ total[1]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[2]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[3]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[4]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[5]|number_format(0, ',', ' ') }}</td>
-                            <td>{{ total[6]|number_format(0, ',', ' ') }}</td>
+                            <th>Catégories</th>
+                            <th>Nbr visites</th>
+                            <th>Nbr revisites</th>
+                            <th>CA visites</th>
+                            <th>CA revisites</th>
+                            <th>ANASER</th>
+                            <th>CA Total</th>
                         </tr>
+                    </thead>
+                    <tbody>
 
-                </tbody>
-                <tfoot>
-                    <tr><th colspan="7" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
-                </tfoot>
-            </table>
-        </div>
-        </div>
-    {% endfor %}
+                            <tr>
+                                {% for ligne in affectation[1] %}
+                                <td>
+                                    {% if loop.index == 1 %}
+                                        {{ ligne }}
+                                    {% else %}
+                                        {{ ligne|number_format(0, ',', ' ') }}
+                                    {% endif %}
+                                </td>
+                                {% endfor %}
+
+                            </tr>
+                            <tr>
+                                <td>{{ affectation[4][0] }}</td>
+                                <td>{{ affectation[4][1]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][2]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][3]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][4]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][5]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][6]|number_format(0, ',', ' ') }}</td>
+                            </tr>
+
+                    </tbody>
+                    <tfoot>
+                        <tr><th colspan="7" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
+                    </tfoot>
+                </table>
+            </div>
+            </div>
+        {% endfor %}
+    {% else %}
+        Il n'y a pas encore d'activités sur cette caisse aujourd'hui.
+    {% endif %}
     
 {% endblock %}
 {% block javascripts -%}
@@ -157,8 +160,18 @@
             $( "#fin" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "+0Y", dateFormat: 'dd-mm-yy' });
            
         });
-        function imprimer(){
+        function imprimerTout(){
             var printContents = document.getElementById('printDiv').innerHTML;
+            var originalContents = document.body.innerHTML;
+            document.body.style.backgroundColor = "white"
+            document.body.innerHTML = printContents;
+            window.print();
+            document.body.style.backgroundColor = "rgb(228, 229, 230)"
+            document.body.innerHTML = originalContents;
+        }
+        
+        function imprimer(id){
+            var printContents = document.getElementById(id).innerHTML;
             var originalContents = document.body.innerHTML;
             document.body.style.backgroundColor = "white"
             document.body.innerHTML = printContents;
